[package]
name = "chipmunk"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bincode = "1.3.3"
bytes = { version = "1.6.1", features = ["serde"] }
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }

[dev-dependencies]
tempdir = "0.3.7"
walkdir = "2.5.0"
