[package]
name = "chipmunk"
version = "0.1.0"
edition = "2021"
default-run = "chipmunk"

[dependencies]
axum = "0.7.5"
bincode = "1.3.3"
bloomfx = "0.1.0"
bytes = { version = "1.6.1", features = ["serde"] }
chrono = "0.4.38"
dashmap = { version = "6.0.1", features = ["serde"] }
fxhash = "0.2.1"
parking_lot = "0.12.3"
reqwest = "0.12.7"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
reqwest = "0.12.7"
tempdir = "0.3.7"
walkdir = "2.5.0"
