[package]
name = "chipmunk"
version = "0.1.0"
edition = "2021"
default-run = "chipmunk"

[dependencies]
axum = "0.7.5"
bincode = "1.3.3"
bloomfx = "0.1.0"
byteorder = "1.5.0"
bytes = { version = "1.6.1", features = ["serde"] }
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity = "2.1.0"
dashmap = { version = "6.0.1", features = ["serde"] }
fxhash = "0.2.1"
parking_lot = "0.12.3"
prost = "0.13.3"
reqwest = "0.12.7"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"

[dev-dependencies]
reqwest = "0.12.7"
tempdir = "0.3.7"
walkdir = "2.5.0"

[build-dependencies]
prost-build = "0.13.3"
